--- a/pom.xml
+++ b/pom.xml
@@ -7,7 +7,7 @@
 		<version>2.1.6.RELEASE</version>
 		<relativePath/>
 	</parent>
-	
+	<packaging>jar</packaging>
     <groupId>ubbl</groupId>
     <artifactId>ubbl_data_service</artifactId>
     <version>1.0-SNAPSHOT</version>
@@ -68,4 +68,14 @@
             </dependency>
         </dependencies>
     </dependencyManagement>
+    
+	<build>
+		<plugins>
+			<plugin>
+				<groupId>org.springframework.boot</groupId>
+				<artifactId>spring-boot-maven-plugin</artifactId>
+            </plugin>
+		</plugins>
+	</build>
+	
 </project>
